# src/routes/agent.routes.js
@@ -10,5 +10,6 @@ router.get('/agents', optionalAuthenticate, agentController.getAgents);
 router.get('/agents/:agent_id/wishlist', optionalAuthenticate, agentController.getAgentWishlist);
 router.post('/agents', optionalAuthenticate, validate(createAgentSchema), agentController.createAgent);
 router.put('/agents/:agent_id/resource', optionalAuthenticate, agentController.updateAgentResource);
+router.delete('/agents/:agent_id', optionalAuthenticate, agentController.deleteAgent);
 
 export default router;
